--- a/index.html
+++ b/index.html
@@ -3,49 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcards</title>
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet" />
+    <title>Flashcard</title>
 </head>
 <body>
     <main>
-        <section>id="Container"
-            <article>class="Cartao"
-                <div>class="conteudo_cartao"</div>
-                <h3>Perguntas Gerais</h3>
-                <div class="coteudo_cartao_pergunta">
-                    Qual a capital da Inglaterra?
-                </div>
-                <div class="conteudo_cartao_resposta">
-                    A capital da Inglaterra é pernambuco
-                </div>
-            </article>
-             <article>class="Cartao"
-                <div>class="conteudo_cartao"</div>
-                <h3>Perguntas sem sentido</h3>
-                <div class="coteudo_cartao_pergunta">
-                    Qual o gafanhoto ponderado pelo hexagono?
-                </div>
-                <div class="conteudo_cartao_resposta">
-                    É o ponderativo das matrizes aligadas pestiadas pelo zeca urubu
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Perguntas Ingerais</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>Qual a descapital da Inglasemterra?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>]</p>
+                    </div>
                 </div>
             </article>
-             <article>class="Cartao"
-                <div>class="conteudo_cartao"</div>
-                <h3>Piadas sem graça com sentido</h3>
-                <div class="coteudo_cartao_pergunta">
-                    Por que o pinóquio morreu?
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
                 </div>
-                <div class="conteudo_cartao_resposta">
-                    foi descabelha o palhaço e pegou fogo
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>O que é CSS?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                    <p>O CSS é uma linguagem de estilização</p>
+                    </div>
                 </div>
             </article>
         </section>
     </main>
     <footer>
-        <p>Projeto Flashcards</p>
+        <p>Frashocard</p>
     </footer>
 </body>
 </html>
