--- a/index.html
+++ b/index.html
@@ -18,39 +18,38 @@
                 <div class="cartao__conteudo">
                     <h3>Perguntas Ingerais</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual a descapital da Inglasemterra?</p>
+                        <p>Qual a capital da Inglasemterra?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>]</p>
+                        <p>A capital da Inglasemterra é Moscou, <br> localizado na parte norte do país</p>
                     </div>
                 </div>
             </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Perguntas Serentido</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é CSS?</p>
+                        <p>Quem foi Nikola Tesla?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                    <p>O CSS é uma linguagem de estilização</p>
+                    <p>Nikola Tesla foi um inventor sérvio-americano, pioneiro da corrente alternada (CA), <br> motor elétrico e transmissão sem fio. Pai da energia elétrica moderna.</p>
                     </div>
                 </div>
             </article>
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Perguntas Programais</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>O que é CSS?</p>
+                        <p>Quem criou a primeira linguagem de programação?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                    <p>O CSS é uma linguagem de estilização</p>
-                    </div>
+                    <p></p><p>Ada Lovelace criou a primeira linguagem de programação, <br> em 1843, para a Máquina Analítica de Charles Babbage.</p></div>
                 </div>
             </article>
         </section>
     </main>
     <footer>
-        <p>Frashocard</p>
+        <p>Flashcards</p>
     </footer>
 </body>
 </html>
