--- a/index.html
+++ b/index.html
@@ -4,52 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet" />
     <title>Flashcard</title>
 </head>
 <body>
     <main>
         <section id="container">
-            <article class="cartao">
+            <!-- <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Perguntas Ingerais</h3>
+                    <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>Qual a capital da Inglasemterra?</p>
+                        <p>O que é JavaScript?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>A capital da Inglasemterra é Moscou, <br> localizado na parte norte do país</p>
+                        <p>O JavaScript é uma linguagem de programação</p>
                     </div>
                 </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Perguntas Serentido</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Quem foi Nikola Tesla?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p>Nikola Tesla foi um inventor sérvio-americano, pioneiro da corrente alternada (CA), <br> motor elétrico e transmissão sem fio. Pai da energia elétrica moderna.</p>
-                    </div>
-                </div>
-            </article>
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Perguntas Programais</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>Quem criou a primeira linguagem de programação?</p>
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                    <p></p><p>Ada Lovelace criou a primeira linguagem de programação, <br> em 1843, para a Máquina Analítica de Charles Babbage.</p></div>
-                </div>
-            </article>
+            </article> -->
         </section>
     </main>
     <footer>
-        <p>Flashcards</p>
+        <p>Projetao FlashaCardan</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
 </html>
